# stroll_bearnav

./: .gitignore  CMakeLists.txt  README.md  evolve.sh  package.xml  record_data.sh
action/: loadMap.action  navigator.action
cfg/: distance.cfg  featureExtraction.cfg  featureExtraction_zed.cfg  listener.cfg  navigator.cfg  navigator_zed.cfg  supervisor.cfg  threshold.cfg
etc/: default.yaml
icra_2018_adamap/: exposure.gnu  map2.gnu  process.sh  t-test.cpp
icra_2019_adamap/: Makefile  cleanup.sh  features.gnu  map.gnu  map3.gnu  process.sh  t-test  weihang.gnu
launch/: cameleon_driver.launch  evaluate.launch  evaluate2.launch  evaluate_terminate.launch  mapper.launch  mapping-core.launch  mapping-gui.launch  navigation-core.launch  navigation-gui.launch  remap.launch  remapTest.launch  remapTest2.launch  stroll-core-baseline.launch  stroll-core-event.launch  stroll-core-fisheye.launch  stroll-core-mapping.launch  stroll-core-simulation.launch  stroll-core-zed.launch  stroll-core.launch  stroll-gui-mapping.launch  stroll-gui-remapping.launch  stroll-gui.launch  stroll-map.launch  stroll-maptest.launch  stroll-nav.launch  stroll.launch  stroll_bearnav.launch  stroll_mapping.launch  stroll_navigation.launch
lift_2019_VIR/: map.gnu  process.sh
mesas_2018_exposure/: build_temporal_statistics.sh  evaluate.sh  features.gnu  map.gnu  map2.gnu  map3.gnu  process.sh  t-test.cpp  test_temporal_models.sh
msg/: Feature.msg  FeatureArray.msg  NavigationInfo.msg  PathProfile.msg  Speed.msg
ral_2019_adamap/: eval.sh  map.gnu  process.sh
rviz/: nav.rviz  sensors.rviz
script/: collect_statistics.sh  gui_setup-mapping.sh  gui_setup.sh  hesplot.gnu  histogram_listener.sh  plot2.gnu  test.sh  test4.sh
server/: Makefile  view_cam.sh
server/include/: CConsole.h  CMessage.h  CMessageServer.h  CRobot.h
server/src/: CConsole.cc  CMessage.cc  CMessageServer.cc  CRobot.cc
server/src/main/: client.cc  server.cc
src/: CMessage.cpp  CMessageClient.cpp  CMessageClient.h  CRobot.cpp  CRobot.h  CTimer.cpp  ImageConverter.cpp  angleFromFeature.cpp  autoRemapTest.cpp  autoRemapper.cpp  cameleon_ros_driver.cpp  cameleon_video.cpp  distance.cpp  distanceMeasurement.cpp  featureEvolver.cpp  featureExtraction.cpp  featureExtraction.py  featureExtraction_zed.cpp  featureHolder.cpp  featureTesting.cpp  generated_16.i  generated_32.i  generated_64.i  imgFeatures.cpp  joyImage.cpp  listener.cpp  loadMap.cpp  mapMatchInfoListener.cpp  mapPreprocessor.cpp  mapPreprocessor_zed.cpp  mapper.cpp  navigator.cpp  navigator_e2e.cpp  odometryMonitor.cpp  pasted  pid.cpp  remapper.cpp  rosbag.cpp  stats.bak  supervisor.cpp  (+6 more)
src/grief/: Makefile  annotate.cpp  evolve_grief.cpp  match_all.cpp
src/grief/grief/: Makefile  a.txt  b.txt  c.txt  generate_code.py  generated_16.i  generated_32.i  generated_64.i  grief.cpp  grief.h  new.txt  pair_stats.txt  test_pairs.bak  test_pairs.brief  test_pairs.grief  test_pairs.txt
src/modules/: lift.py  lift_desc.py  lift_kp.py  lift_ori.py
src/strategies/: CBestStrategy.cpp  CBestStrategy.h  CMonteCarloStrategy.cpp  CMonteCarloStrategy.h  CQuantilStrategy.cpp  CQuantilStrategy.h  CStrategy.cpp  CStrategy.h
src/t_models/: CFrelement.cpp  CFrelement.h  CMovAvg.cpp  CMovAvg.h  CSum.cpp  CSum.h  CTemporal.cpp  CTemporal.h  CTimeMean.cpp  CTimeMean.h  CTimer.cpp  CTimer.h  CWSum.cpp  CWSum.h
src/test/desc/: best_val_loss.h5  events.out.tfevents.1513435715.iccluster136  mean.h5  network.data-00000-of-00001  network.index  params.json  step.h5
src/test/kp/: best_val_loss.h5  events.out.tfevents.1517456883.gra951  events.out.tfevents.1517468093.gra952  events.out.tfevents.1517484418.gra934  mean.h5  network.data-00000-of-00001  network.index  params.json  std.h5  step.h5
src/test/ori/: best_val_loss.h5  events.out.tfevents.1515505353.iccluster136  mean.h5  network.index  params.json  step.h5
src/utils/: config.py  dump.py  helper.py  kp_tools.py  layers.py  test.py
srv/: SetDistance.srv
