<?xml version="1.0"?>
<package>
    <name>stroll_bearnav</name>
    <version>1.0.0</version>
    <description>Implementation of the Simple, Yet Stable Bearing Only Navigation</description>

    <maintainer email="tomas.krajnik@agents.fel.cvut.cz">Tom Krajnik</maintainer>
    <maintainer email="jiri.ulrich@fel.cvut.cz">Jiri Ulrich</maintainer>

    <license>MIT</license>

    <url type="website">https://github.com/gestom/stroll_bearnav/wiki</url>
    <url type="bugtracker">https://github.com/gestom/stroll_bearnav/issues</url>
    <url type="repository">https://github.com/gestom/stroll_bearnav</url>

    <author email="tomas.krajnik@agents.fel.cvut.cz">Tom Krajnik</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>rosbag</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>rosbag</run_depend>

    <export>
    </export>
</package>
